--- a/.github/workflows/deploy-to-ecs.yml
+++ b/.github/workflows/deploy-to-ecs.yml
@@ -1,6 +1,7 @@
-name: Deploy to ECS
+name: Deploy to test
 
 on:
+  # Manual trigger via GitHub UI
   workflow_dispatch:
     inputs:
       environment:
@@ -8,12 +9,14 @@ on:
         required: true
         default: "test"
 
+  # Auto-trigger on PR to develop
+  pull_request:
+    branches: [develop]
+
 jobs:
   deploy:
     name: Deploy to ECS Fargate
     runs-on: ubuntu-latest
-
-    environment: ${{ github.event.inputs.environment }}
 
     steps:
       - name: Checkout repository
@@ -26,9 +29,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Determine environment
+        id: env
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "env=${{ github.event.inputs.environment }}" >> $GITHUB_OUTPUT
+          else
+            echo "env=test" >> $GITHUB_OUTPUT
+          fi
+
       - name: Update ECS Service
         run: |
+          CLUSTER_NAME=${{ secrets[format('ECS_CLUSTER_NAME_%s', steps.env.outputs.env | upper)] }}
+          SERVICE_NAME=${{ secrets[format('ECS_SERVICE_NAME_%s', steps.env.outputs.env | upper)] }}
+
           aws ecs update-service \
-            --cluster ${{ secrets[format('ECS_CLUSTER_NAME_{0}', github.event.inputs.environment)] }} \
-            --service ${{ secrets[format('ECS_SERVICE_NAME_{0}', github.event.inputs.environment)] }} \
+            --cluster "$CLUSTER_NAME" \
+            --service "$SERVICE_NAME" \
             --force-new-deployment
