--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,22 +1,22 @@
-name: Deploy to ECS
+name: Deploy to test
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - '.github/workflows/docker-ecr.yml'
-      - '.github/workflows/deploy-to-ecs.yml'
-      - 'app/**'
-      - 'terraform/**'
-      - '!terraform/README.md'
-      - '!app/README.md'
+  # Manual trigger via GitHub UI
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to deploy to"
+        required: true
+        default: "test"
+
+  # Auto-trigger on PR to develop
+  pull_request:
+    branches: [develop]
 
 jobs:
   deploy:
     name: Deploy to ECS Fargate
     runs-on: ubuntu-latest
-
-    environment: production
 
     steps:
       - name: Checkout repository
@@ -29,9 +29,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Determine environment
+        id: env
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "env=${{ github.event.inputs.environment }}" >> $GITHUB_OUTPUT
+          else
+            echo "env=test" >> $GITHUB_OUTPUT
+          fi
+
       - name: Update ECS Service
         run: |
+          CLUSTER_NAME=${{ secrets[format('ECS_CLUSTER_NAME_%s', steps.env.outputs.env | upper)] }}
+          SERVICE_NAME=${{ secrets[format('ECS_SERVICE_NAME_%s', steps.env.outputs.env | upper)] }}
+
           aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER_NAME }} \
-            --service ${{ secrets.ECS_SERVICE_NAME }} \
+            --cluster "$CLUSTER_NAME" \
+            --service "$SERVICE_NAME" \
             --force-new-deployment
